--- a/ninja_battle.css
+++ b/ninja_battle.css
@@ -9,33 +9,48 @@ p{
 h1{
   font-size: 30px;
   font-weight: bold;
+  padding-top: 40px;
+  padding-bottom: 20px;
 }
 body{
   background-color: black;
 }
 .wrapper{
-  width: 100%;
+  /*width: 100%;*/
   /*background-color: black;*/
+  width: 1440px;
+  height: 900px;
   margin: 20px auto;
 }
 #back_img{
   width: 1440px;
   height: 900px;
-  /*background-color: lightgray;*/
-  /*background-image: url("images/beach.jpg");*/
+  background-position: center;
+  /*padding-top: 300px;*/
 }
-#select{
+#select, #players{
   width: 300px;
   height: 200px;
-  background-color: gray;
   border-radius: 10px;
+  background-color: gray;
   text-align: center;
   margin: 0px auto;
 }
-  #select h1{
-    padding-top: 40px;
-  }
 button{
   font-size: 16px;
   margin: 5px;
+}
+#back_img{
+  background-repeat: no-repeat;
+}
+#ninja{
+  margin-left: 200px;
+  width: 1000px;
+  height: 300px;
+  /*background-color: lightgray;*/
+  text-align: center;
+}
+.display1, .display2{
+  display: inline-block;
+  width: 400px;
 }
