--- a/ninja_battle.css
+++ b/ninja_battle.css
@@ -16,16 +16,15 @@ body{
   background-color: black;
 }
 .wrapper{
-  /*width: 100%;*/
-  /*background-color: black;*/
   width: 1440px;
   height: 900px;
-  margin: 20px auto;
+  margin: 0px auto;
 }
 #back_img{
   width: 1440px;
   height: 900px;
   background-position: center;
+  background-repeat: no-repeat;
   /*padding-top: 300px;*/
 }
 #select, #players{
@@ -35,13 +34,12 @@ body{
   background-color: gray;
   text-align: center;
   margin: 0px auto;
+  position: relative;
+  top: 350px;
 }
 button{
   font-size: 16px;
   margin: 5px;
-}
-#back_img{
-  background-repeat: no-repeat;
 }
 #ninja{
   margin-left: 200px;
@@ -49,6 +47,8 @@ button{
   height: 300px;
   /*background-color: lightgray;*/
   text-align: center;
+  position: relative;
+  top:350px;
 }
 .display1, .display2{
   display: inline-block;
